# csv2sfz

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
